Added deep_update so Defaults work as we expect with nested settings - also added tests for this.

--- a/test/application5.yml
+++ b/test/application5.yml
@@ -1,6 +1,10 @@
 default:
   :name: default name
   :port: 5000
-  
+  :email:
+    :delivery_method: smtp
+    :port: 25
 test:
   :port: 5001
+  :email:
+    :port: 999
